<resources>
    <string name="app_name">Prototicket</string>
    <string name="login">Iniciar sesión</string>
    <string name="createTicket">Crear Tiquete</string>
    <string name="dateBuy">Fecha Compra</string>
    <string name="date">Fecha Viaje</string>
    <string name="travelRoute">Origen-Destino</string>
    <string name="posting">Punto de venta</string>
    <string name="vehicle">Vehiculo</string>
    <string name="traveler">Pasajero</string>
    <string name="cedula">Cédula</string>
    <string name="RH">G.S.RH</string>
    <string name="time">Hora Viaje</string>
    <string name="checkTicket">Verificar Tiquete</string>
    <string name="scanQR">Escanear Tiquete</string>
    <string name="configuration">Ajustes</string>
    <string name="ERROR_FORMATO_CC_MAL_FORMADO">Formato de codigo de cédula mal formado</string>
    <string name="INFO__TIQUETE_CREADO_EXITOSAMENTE">Tiquete creado correctamente</string>
    <string name="ERROR_LECTURA_CEDULA">Error en la lectura del código de la cédula</string>
    <string name="DB_NAME">main_db</string>

    <string name="itinerario">Itinerario</string>

    <string name="despacharBus">Despachar bus</string>

    <!-- In this collection, we will keep each title "as is" -->
</resources>